--- a/Atividade 8 - Interfaces/atividade6.css
+++ b/Atividade 8 - Interfaces/atividade6.css
@@ -159,24 +159,48 @@ iframe{
 }
 
 #section4{
-   
     position: relative;
     display: flex;
-    flex-direction: row;
     background-color: rgb(255, 255, 255);
     width: 99%;
-    height: 400px;
+    height: 350px;
     border-bottom: palevioletred solid 20px;
-    border-right: palevioletred solid 20px;
-    align-content: center;
-    margin-top: -20px;
+}
+
+form{
+    background-color: blue;
+    width: 25%;
+    float: left;
+    padding: 20px;
+}
+
+.input{
+    border: 1px solid black ;
+    width: 600px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+label{
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+textarea{
+    height: 200px;
+    width: 400px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+input{
+    
 }
 
 #redes_sociais{
+    background-color: aqua;
     position: relative;
     width: 30%;
-    height: auto;
-    float: right;
 }
 
 #redes_sociais p{
